--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/sharathsreedhar">View on GitHub</a>
 
-          <h1 id="project_title">Sharathsreedhar.github.io</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Welcome to Sharath Sreedhar's homepage!</h1>
+          <h2 id="project_tagline">Feel free to bookmark this page and follow it.</h2>
 
         </header>
     </div>
